前端门户增加获取一级商品类目、二级商品类目

--- a/freshmalltest/freshmall-protal-web/src/main/resources/templates/index.html
+++ b/freshmalltest/freshmall-protal-web/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     <div class="fresh-left">
       <div class="category">
         <ol class="category-list">
-          <li class="category-item">
+          <li class="category-item" th:each="one:${itemCats1}">
             <div class="category-item-bg">
               <div class="category-info"> <p class="head"> <a href="#">新鲜水果</a> </p> <span class="bottom"> <a href="#" class="subtitle">柚子</a> <a href="#" class="subtitle">榴莲</a> <a href="#" class="subtitle">苹果</a> </span> </div>
             </div>
